Сокращатель ссылок (Shortener) №3310-14
Задание выполнено, угодил Вале